// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render with many props assigned 1`] = `
<div
  className="Badge test-class"
>
  <figure
    className="iconContainer"
  >
    <svg />
    <figcaption
      className="label"
    >
      Badge Icon
    </figcaption>
  </figure>
</div>
`;

exports[`Badge should render with required props 1`] = `
<div
  className="Badge"
>
  <figure
    className="iconContainer"
  >
    <svg />
    <figcaption
      className="label"
    >
      Testing
    </figcaption>
  </figure>
</div>
`;
